# snippits-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  sample_snippit.txt
src/: main.rs  snippits.rs
static/scripts/: prism.js
static/styles/: bedrock.css  prism.css  style.css  zendesk_garden.css
templates/: index.html.hbs  new_snippit.html.hbs
templates/common/: header.hbs
